sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:8: error: not found: value k
    k = i
    ^AlgInsertionSort:15: error: not found: value k
    echange(j, k)
               ^